# logimage

./: README.md  example_logimage.py  pyproject.toml  solve_logimage.py
.github/workflows/: main.yml
logimage/: cell.py  input.py  logimage.py  main.py  problem.py  rule.py
rules_examples/: chat.txt  dragon.txt  ecureuil.txt  escrime.txt  labo.txt  pingouin.txt  ski.txt  test.txt
tests/: test_cell.py  test_input.py  test_logimage.py  test_main.py  test_problem.py  test_rule.py  test_temp.py
tests/fixtures/: bad_rules_example.txt  rules_example.txt  rules_example_inverted.txt
