[tool.poetry]
name = "logimage"
version = "0.1.0"
description = "résolution automatique de logimage"
authors = ["Maxime Hemery"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
tk = "^0.1.0"
scipy = "^1.9.0"
numpy = "^1.23.1"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
